JIRA/update_reputation_accounting
Fixed after reveiw
